--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,30 +1,26 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+/* Charities */
+.charities-container .charity-icon {
+    display: inline-block;
 }
 
-.menu:before {
-  content: "[";
+.charities-container .charity-name {
+    vertical-align: middle;
 }
 
-.menu:after {
-  content: "]";
+.charities-container .widget .widget-content .title {
+    display: inline-block;
+    font-size: 20px;
 }
 
-.menu > li {
-  display: inline;
+.charities-container .widget .widget-icon {
+    width: 55px;
+    height: 55px;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.charities-container .widget .widget-icon i {
+    line-height: 55px;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.charities-container .title-bar-search {
+    margin-top: 15px;
 }
