--- a/app/css/app.css
+++ b/app/css/app.css
@@ -49,3 +49,81 @@
 .following-container .charity-name span {
     display: block;
 }
+
+/* Toggle */
+.toggle {
+    display: inline-block;
+    vertical-align: middle;
+
+    /* Disable text selection */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.toggle input[type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+}
+
+.toggle .toggle-button {
+    cursor: pointer;
+    display: block;
+    position: relative;
+    box-shadow: inset 0 0 0 1px #d5d5d5;
+    text-indent: -5000px;
+    height: 30px;
+    width: 50px;
+    border-radius: 15px;
+}
+
+.toggle .toggle-button:before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 30px;
+    width: 30px;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+    background: rgba(19,191,17,0);
+}
+
+.toggle .toggle-button:after {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 30px;
+    width: 30px;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+    background: white;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.2), 0 2px 4px rgba(0,0,0,.2);
+    -webkit-transition: transform 250ms;
+    transition: transform 250ms;
+}
+
+.toggle .toggle-button.ng-enter,
+.toggle .toggle-button.ng-enter:after {
+    -webkit-transition: transform 250ms;
+    transition: transform 250ms;
+}
+
+.toggle .toggle-button.checked:before {
+    width: 50px;
+    background: rgba(19,191,17,1);
+}
+
+.toggle .toggle-button.checked:after {
+    box-shadow: inset 0 0 0 1px rgba(19,191,17,1), 0 2px 4px rgba(0,0,0,.2);
+}
+
+.toggle .toggle-button.checked:after {
+    transform: translate3d(20px, 0, 0);
+}
+
+.notification-select .glyphicon {
+    font-size: 1.6em;
+}
