--- a/app/dashboard/templates/notifications.html
+++ b/app/dashboard/templates/notifications.html
@@ -3,9 +3,9 @@
         <h2 class="title-nar-title pull-left">Email Notifications</h2>
     </div>
     <div ng-repeat="option in emails" class="notification-select col-xs-12">
-        <ng-switch on="option.checked">
-            <div ng-switch-when="true" class="glyphicon glyphicon-ok-circle"></div>
-            <div ng-switch-when="false" class="glyphicon glyphicon-remove-circle"></div>
+        <ng-switch class="notification-select-switch" on="option.checked">
+            <div ng-switch-when="true" class="notification-select-icon on glyphicon glyphicon-ok-circle"></div>
+            <div ng-switch-when="false" class="notification-select-icon off glyphicon glyphicon-remove-circle"></div>
         </ng-switch>
 
         <label for="subscription-{{$index}}">{{option.description}}</label>
@@ -18,11 +18,16 @@
     <div class="row col-xs-12 clearfix">
         <h2 class="title-nar-title pull-left">Push Notifications</h2>
     </div>
-    <div ng-repeat="option in pushNotifications" class="col-xs-12">
-        <label for="notification-{{$index}}">{{option.description}}</label>
+    <div ng-repeat="option in pushNotifications" class="notification-select col-xs-12">
+        <ng-switch class="notification-select-switch" on="option.checked">
+            <div ng-switch-when="true" class="notification-select-icon on glyphicon glyphicon-ok-circle"></div>
+            <div ng-switch-when="false" class="notification-select-icon off glyphicon glyphicon-remove-circle"></div>
+        </ng-switch>
+
+        <label for="subscription-{{$index}}">{{option.description}}</label>
         <div class="toggle">
-            <input type="checkbox" id="notification-{{$index}}">
-            <label for="notification-{{$index}}"></label>
+            <input ng-model="option.checked" type="checkbox" id="push-{{$index}}">
+            <label class="toggle-button" ng-class="{ 'checked': option.checked }" for="push-{{$index}}"></label>
         </div>
     </div>
 </div>
