--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -1,6 +1,4 @@
 /* Animations */
-
-/* Sidebar */
 #page-wrapper.open-add,
 #page-wrapper.open-remove {
     transition: padding 350ms linear;
@@ -18,15 +16,13 @@
 
 #page-wrapper.open-add-active #sidebar-wrapper,
 #page-wrapper.open #sidebar-wrapper {
-    /*transform: translate3d(180px, 0, 0);*/
     left: 150px;
 }
 
-/* ngInclude/ngView */
 ng-include.ng-enter,
 [ng-include].ng-enter,
 ng-view.ng-enter,
-[ng-view].ng-enter{
+[ng-view].ng-enter {
     opacity: 0;
     transition: opacity 1s;
 }
@@ -34,11 +30,10 @@ ng-view.ng-enter,
 ng-include.ng-enter-active,
 [ng-include].ng-enter-active,
 ng-view.ng-enter-active,
-[ng-view].ng-enter-active{
+[ng-view].ng-enter-active {
     opacity: 1;
 }
 
-/* ngIf */
 .alert-container.ng-leave {
     transition: opacity 1s, transform 1s;
 }
@@ -48,7 +43,6 @@ ng-view.ng-enter-active,
     opacity: 0;
 }
 
-/* ngSwitch */
 .notification-select-icon.ng-enter,
 .notification-select-icon.ng-leave {
     transition: opacity 250ms;
@@ -63,61 +57,106 @@ ng-view.ng-enter-active,
     opacity: 1;
 }
 
-/* Charity List (ngRepeat) */
+@keyframes slide-in {
+    0% {
+        transform: translate3d(-100%, 0, 0);
+        margin-bottom: -97px;
+    }
+
+    60% {
+        transform: translate3d(3%, 0, 0);
+    }
+
+    83% {
+        transform: translate3d(0, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 0);
+        margin-bottom: 15px;
+    }
+}
+
+@-webkit-keyframes slide-in {
+    0% {
+        transform: translate3d(-100%, 0, 0);
+        margin-bottom: -97px;
+    }
+
+    60% {
+        transform: translate3d(3%, 0, 0);
+    }
+
+    83% {
+        transform: translate3d(0, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 0);
+        margin-bottom: 15px;
+    }
+}
+
+@keyframes slide-out {
+    0% {
+        transform: translate3d(0, 0, 0);
+        margin-bottom: 15px;
+    }
+
+    23% {
+        transform: translate3d(3%, 0, 0);
+    }
+
+    83% {
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(-100%, 0, 0);
+        margin-bottom: -97px;
+    }
+}
+
+@-webkit-keyframes slide-out {
+    0% {
+        transform: translate3d(0, 0, 0);
+        margin-bottom: 15px;
+    }
+
+    23% {
+        transform: translate3d(3%, 0, 0);
+    }
+
+    83% {
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(-100%, 0, 0);
+        margin-bottom: -97px;
+    }
+}
+
 .charity.ng-enter,
 .charity.ng-leave {
-    transition: transform 750ms, margin 900ms;
+    -webkit-animation-duration: 900ms;
+    animation-duration: 900ms;
+}
+
+.charity.ng-enter {
+    -webkit-animation-name: slide-in;
+    animation-name: slide-in;
+}
+
+.charity.ng-leave {
+    -webkit-animation-name: slide-out;
+    animation-name: slide-out;
 }
 
 .charity.ng-enter-stagger,
 .charity.ng-leave-stagger {
-    transition-delay: 200ms;
-}
-
-.charity.ng-enter,
-.charity.ng-leave-active {
-    transform: translateX(-100%);
-    margin-bottom: -97px;
-}
-
-.charity.ng-enter-active {
-    transform: translateX(0);
-    margin-bottom: 15px;
-}
-
-.charity.ng-move,
-.charity.ng-move .widget {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-}
-
-.charity.ng-move .widget {
-    -webkit-animation-name: pulse;
-    animation-name: pulse;
-}
-
-.charity.ng-move-stagger,
-.charity.ng-move-stagger .widget {
     -webkit-animation-delay: 200ms;
     animation-delay: 200ms;
-}
-
-@keyframes pulse {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes pulse {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
+    -webkit-animation-duration: 0s;
+    animation-duration: 0s;
 }
