--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,6 +10,7 @@
 
 /* Charities */
 .charities-container .charity {
+    /* Make sure the height of the element is 97px to keep the animation smooth */
     margin-bottom: 15px;
 }
 
@@ -40,6 +41,10 @@
 }
 
 /* Following */
+.following-container .widget-body {
+    position: relative;
+}
+
 .following-container .following-user {
     margin-bottom: 15px;
     text-align: center;
@@ -57,6 +62,18 @@
 
 .following-container .charity-name span {
     display: block;
+}
+
+.following-user-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 20px;
+    color: #CFCFCF;
+}
+
+.following-user-close:hover {
+    color: #B3B3B3;
 }
 
 /* Toggle */
@@ -157,4 +174,9 @@
 /* Alerts */
 .alert-container {
     overflow: hidden;
+}
+
+/* Menu */
+.dropdown-menu {
+    display: block;
 }
