--- a/app/dashboard/templates/dashboard.html
+++ b/app/dashboard/templates/dashboard.html
@@ -1,11 +1,8 @@
 <div class="alerts-container" data-ng-controller="AlertsCtrl" data-ng-show="alerts.length">
     <div class="col-xs-12">
-        <div class="alert-container"
-             ng-repeat="alert in alerts"
-             ng-if="alert.showAlert">
-            <alert type="{{alert.type}}"
-                   close="closeAlert($index)">{{alert.msg}}</alert>
-        </div>
+        <wmc-alert ng-repeat="alert in alerts"
+                   type="{{alert.type}}"
+                   close="closeAlert($index)">{{alert.msg}}</wmc-alert>
     </div>
 </div>
 
