--- a/app/global/templates/alert.html
+++ b/app/global/templates/alert.html
@@ -1,5 +1,5 @@
 <div class="alert-container alert" ng-class="'alert-' + (type || 'warning')" role="alert">
-    <button type=\"button\" class="close" ng-click="dismiss()">
+    <button type="button" class="close" ng-click="dismiss()">
         <span aria-hidden="true">&times;</span>
         <span class="sr-only">Close</span>
     </button>
